--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ITSM</title>
+  <title>JDC ITSM</title>
   <link href="css/style.css" rel="stylesheet">
   <!-- javaScript  -->
   <script src="js/jquery-1.11.3.min.js"></script>
@@ -28,7 +28,7 @@
   <!-- S:header -->
   <header id="header">
     <div class="container"> <a class="menuToggle"><i class="fa fa-bars" aria-hidden="true"></i>메뉴토글</a>
-      <h1><a href="">ITSM</a></h1>
+      <h1><a href="">JDC ITSM</a></h1>
       <!-- S:menu -->
       <nav id="menu">
         <div class="util">
@@ -54,63 +54,10 @@
   <!-- E:header -->
   <!-- S:content -->
   <article id="content" class="main">
-    <h3 class="sr-only">메인컨텐츠</h3>
-    <section class="main-issue">
-      <div class="video">
-        <video autoplay="" loop="">
-                  <source src="images/trip.mp4">
-              </video>
-      </div>
-      <img class="issue-bg" src="images/@tmp-issue.jpg">
-      <div class="container">
-        <div class="search">
-          <h4>나만을 위한 <strong>제주여행</strong></h4>
-          <fieldset>
-            <legend class="sr-only">검색폼</legend>
-            <input type="text">
-            <button><i class="fa fa-search" aria-hidden="true"></i>검색</button>
-          </fieldset>
-          <div class="text">
-            <button class="prevSlider"><i class="fa fa-angle-left" aria-hidden="true"></i>이전검색어</button>
-            <ul>
-              <li><strong>제주맛집</strong></li>
-              <li><strong>제주맛집2</strong></li>
-              <li><strong>제주맛집3</strong></li>
-              <li><strong>제주맛집4</strong></li>
-            </ul>
-            <button class="nextSlider"><i class="fa fa-angle-right" aria-hidden="true"></i>다음검색어</button>
-          </div>
-        </div>
-        <ul class="icons">
-          <li><a href=""><i class="fa fa-map-signs" aria-hidden="true"></i>도보코스</a></li>
-          <li><a href=""><i class="fa fa-bicycle" aria-hidden="true"></i>자전거코스</a></li>
-          <li><a href=""><i class="fa fa-quote-right" aria-hidden="true"></i>제주문화</a></li>
-          <li><a href=""><i class="fa fa-coffee" aria-hidden="true"></i>카페로드</a></li>
-          <li><a href=""><i class="fa fa-magic" aria-hidden="true"></i>축제/행사</a></li>
-          <li><a href=""><i class="fa fa-calendar-check-o" aria-hidden="true"></i>추천여행일정</a></li>
-        </ul>
-        <div class="weather">
-          <ul>
-            <li><i class="wi wi-day-sunny" aria-hidden="true"></i>
-              <h5>제주시 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-day-sunny-overcast" aria-hidden="true"></i>
-              <h5>서귀포시 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-cloudy" aria-hidden="true"></i>
-              <h5>성산 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-day-cloudy" aria-hidden="true"></i>
-              <h5>고산 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-rain" aria-hidden="true"></i>
-              <h5>노형 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-sprinkle" aria-hidden="true"></i>
-              <h5>중문 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-sleet" aria-hidden="true"></i>
-              <h5>제주시 4℃<small>아주 맑고 추워요</small></h5></li>
-            <li><i class="wi wi-snow" aria-hidden="true"></i>
-              <h5>제주시 4℃<small>아주 맑고 추워요</small></h5></li>
-          </ul>
-        </div>
-        <i class="fa fa-angle-down" aria-hidden="true"></i>
-      </div>
+
+    <div class="container">
+
+    </div>
     </section>
 
 
