서브 진행중

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ITSM</title>
+  <title>ITMS</title>
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/common.js"></script>
@@ -57,8 +57,13 @@
 </head>
 
 <body>
-  <h1>ITSM</h1>
+  <h1>ITMS</h1>
   <a href="main.html"><strong>메인</strong> main.html</a>
+  <hr>
+  <a href="request.html"><strong>서비스신청</strong> request.html</a>
+  <hr>
+  <a href="manage.html"><strong>서비스관리-처리리스트</strong> manage.html</a>
+  <a href="detail.html"><strong>서비스관리-처리상세</strong> detail.html</a>
   <hr>
 </body>
 
