--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JDC ITSM</title>
+  <title>JDC ITMS</title>
   <link href="css/style.css" rel="stylesheet">
   <!-- javaScript  -->
   <script src="js/jquery-1.11.3.min.js"></script>
@@ -17,71 +17,114 @@
   <!-- S:skip_navi -->
   <div class="skip_navi"> <a class="sr-only sr-only-focusable" href="#header">메뉴 바로가기</a> <a class="sr-only sr-only-focusable" href="#content">본문 바로가기</a> <a class="sr-only sr-only-focusable" href="#footer">푸터 바로가기</a> </div>
   <!-- E:skip_navi -->
-
-  <div class="top_banner">
-    <div class="container">
-      <img src="images/banner.png" data="#57a6c7" alt="이벤트배너">
-      <button><i class="fa fa-times" aria-hidden="true"></i>배너닫기</button>
-
-    </div>
-  </div>
   <!-- S:header -->
   <header id="header">
-    <div class="container"> <a class="menuToggle"><i class="fa fa-bars" aria-hidden="true"></i>메뉴토글</a>
-      <h1><a href="">JDC ITSM</a></h1>
-      <!-- S:menu -->
-      <nav id="menu">
-        <div class="util">
-          <span><strong>홍길동</strong>님 접속을 환영합니다.</span>
-          <ul>
-            <li><a href="">로그아웃</a></li>
-            <li><a href="">개인정보</a></li>
-          </ul>
-        </div>
-        <ul class="main-menu">
-          <li><a href="">HOME</a></li>
-          <li><a href="">서비스신청</a></li>
-          <li><a href="">서비스관리</a></li>
-          <li><a href="">서비스조회</a></li>
-          <li><a href="">서비스현황</a></li>
-          <li><a href="">공지사항</a></li>
-          <li><a href="">기초자료</a></li>
-        </ul>
-      </nav>
-      <!-- E:mmenu -->
+    <div class="container">
+      <a class="menuToggle"><i class="icon-menu"></i>메뉴토글</a>
+      <h1><a href=""><i class="icon-logo"></i>ITMS</a></h1>
     </div>
+    <!-- S:menu -->
+    <nav id="menu">
+      <div class="util">
+        <p><span><strong>홍길동</strong>님</span> 접속을 환영합니다.</p>
+        <ul>
+          <li><a href="">로그아웃</a></li>
+          <li><a href="">개인정보</a></li>
+        </ul>
+      </div>
+      <ul class="main-menu">
+        <li><a class="active" href="">HOME</a></li>
+        <li><a href="">서비스신청</a></li>
+        <li><a href="">서비스관리</a></li>
+        <li><a href="">서비스조회</a></li>
+        <li><a href="">서비스현황</a></li>
+        <li><a href="">공지사항</a></li>
+        <li><a href="">기초자료</a></li>
+      </ul>
+      <button>창닫기</button>
+    </nav>
+    <!-- E:mmenu -->
   </header>
   <!-- E:header -->
   <!-- S:content -->
   <article id="content" class="main">
-
-    <div class="container">
-
-    </div>
+    <section class="issue">
+      <div class="container">
+        <h2>
+          <p>제주의 특성을 살린</p>
+          <p><strong>국제자유도시조성</strong>을 통해</p>
+          <p><strong class="happy">국민행복</strong>에 기여한다.</p>
+        </h2>
+      </div>
     </section>
-
+    <section class="notice">
+      <div class="container">
+        <h2>공지사항</h2>
+        <ul>
+          <li>
+            <a href="">
+              공지사항입니다. 공지사항 입니다.
+              <i>2017-01-27</i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              공지사항입니다. 공지사항 입니다.
+              <i>2017-01-27</i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              공지사항입니다. 공지사항 입니다.
+              <i>2017-01-27</i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              공지사항입니다. 공지사항 입니다.
+              <i>2017-01-27</i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              공지사항입니다. 공지사항 입니다.
+              <i>2017-01-27</i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="status">
+      <div class="container">
+        <h2 class="sr-only">처리현황</h2>
+        <ul>
+          <li class="step01">신청 <strong>32</strong></li>
+          <li class="step02">접수 <strong>32</strong></li>
+          <li class="step03">처리중 <strong>32</strong></li>
+          <li class="step04">설문조사 <strong>32</strong></li>
+          <li class="step05">완료 <strong>32</strong></li>
+        </ul>
+      </div>
+    </section>
 
   </article>
   <!-- E:content -->
   <!-- S:footer -->
   <footer id="footer">
-    <div class="footer-util">
-      <h2>ITSM</h2>
+    <div class="container">
+      <h2><i class="icon-logo"></i>ITMS</h2>
       <ul>
         <li><a href="">이용약관</a></li>
         <li><a href="">개인정보처리방침</a></li>
         <li><a href="">이메일무단수집거부</a></li>
       </ul>
-    </div>
-    <address class="container">
 
-
-            <p>JDC 제주국제자유도시개발센터 <span>| TEL 064-797-5500 | TEL 064-757-5502</span></p>
-
-            <p>제주특별자치도 제주시 첨단로 213-4 제주첨단과학기술단지 엘리트빌딩 (영평동 2170-2)</p>
-            <p>Copyright © 2017 jeju Free International City Development Center. All right Reserved.</p>
-
+      <address>
+        <p><span>JDC 제주국제자유도시개발센터</span> TEL 064-797-5500 | TEL 064-757-5502</p>
+        <p>제주특별자치도 제주시 첨단로 213-4 제주첨단과학기술단지 엘리트빌딩 (영평동 2170-2)</p>
+        <p>Copyright © 2017 jeju Free International City Development Center. All right Reserved.</p>
         </address>
+    </div>
   </footer>
   <!-- E:footer -->
 </body>
