--- a/detail.html
+++ b/detail.html
@@ -179,7 +179,7 @@
             첨부파일
           </dt>
           <dd>
-            <input type="file">
+            <a href="">filename_19877u31.jpg</a>
           </dd>
           <dt class="text">
             처리내용
@@ -224,7 +224,40 @@
           </dd>
         </dl>
 
-        <div class="btn-setS">
+
+        <h2>만족도조사</h2>
+        <h3>서비스 만족도 조사 질의</h3>
+        <ul class="research">
+          <li>
+            <h4>1. 처리 품질 만족도</h4>
+            <p><input name="q1" id="q1-1" type="radio"><label for="q1-1">1</label></p>
+            <p><input name="q1" id="q1-2" type="radio"><label for="q1-2">2</label></p>
+            <p><input name="q1" id="q1-3" type="radio"><label for="q1-3">3</label></p>
+            <p><input name="q1" id="q1-4" type="radio"><label for="q1-4">4</label></p>
+            <p><input name="q1" id="q1-5" type="radio"><label for="q1-5">5</label></p>
+          </li>
+          <li>
+            <h4>2. 처리 기한 만족도</h4>
+            <p><input name="q1" id="q2-1" type="radio"><label for="q2-1">1</label></p>
+            <p><input name="q2" id="q2-2" type="radio"><label for="q2-2">2</label></p>
+            <p><input name="q2" id="q2-3" type="radio"><label for="q2-3">3</label></p>
+            <p><input name="q2" id="q2-4" type="radio"><label for="q2-4">4</label></p>
+            <p><input name="q2" id="q2-5" type="radio"><label for="q2-5">5</label></p>
+          </li>
+          <li>
+            <h4>3. 고객 응대 만족도</h4>
+            <p><input name="q3" id="q3-1" type="radio"><label for="q3-1">1</label></p>
+            <p><input name="q3" id="q3-2" type="radio"><label for="q3-2">2</label></p>
+            <p><input name="q3" id="q3-3" type="radio"><label for="q3-3">3</label></p>
+            <p><input name="q3" id="q3-4" type="radio"><label for="q3-4">4</label></p>
+            <p><input name="q3" id="q3-5" type="radio"><label for="q3-5">5</label></p>
+          </li>
+        </ul>
+
+
+
+
+        <div class="btn-set">
 
           <a class="blue" href="">등록</a>
         </div>
