--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
   <a href="manage.html"><strong>서비스관리-처리리스트</strong> manage.html</a>
   <a href="detail.html"><strong>서비스관리-처리상세</strong> detail.html</a>
   <hr>
+  <a href="state.html"><strong>서비스현황-리스트</strong> state.html</a>
+  <a href="total.html"><strong>서비스현황-집계</strong> total.html</a>
+  <hr>
+  <a href="notice-list.html"><strong>공지사항-목록</strong> notice-list.html</a>
+  <a href="notice-view.html"><strong>공지사항-뷰</strong> notice-view.html</a>
+  <a href="notice-write.html"><strong>공지사항-쓰기</strong> notice-write.html</a>
+  <hr>
+  <a href="basic.html"><strong>기초자료</strong> basic.html</a>
+  <hr>
 </body>
 
 </html>
