--- a/basic.html
+++ b/basic.html
@@ -55,7 +55,7 @@
 
         <h2>유지보수 서비스 점수</h2>
         <h3>조사항목</h3>
-        <ul class="research result">
+        <ul class="research result basic">
           <li>
             <h4>예시 1</h4>
           </li>
@@ -84,7 +84,7 @@
 
         <h2>만족도 조사 점수</h2>
         <h3>조사항목</h3>
-        <ul class="research result">
+        <ul class="research result basic">
           <li>
             <h4>예시 1</h4>
           </li>
